# lolzteam-py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
codegen/: __main__.py  emitter.py  parser.py
codegen/transforms/: operations.py  parameters.py  responses.py  types.py
codegen/utils/: deref.py  naming.py
schemas/: forum.json  market.json
src/lolzteam/: __init__.py
src/lolzteam/runtime/: __init__.py  async_http_client.py  auth.py  errors.py  http_client.py  rate_limiter.py  retry.py  types.py
tests/: test_client.py  test_errors.py  test_rate_limiter.py  test_retry.py
